# focal

./: CONVENTIONS.md  README.md  package-lock.json  package.json
.github/workflows/: deploy-website.yml  release.yml
src/: routeTree.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 002_clear_content.sql
src-tauri/src/: crawler.rs  lib.rs
src-tauri/src/commands/: extract.rs  feed.rs  mod.rs  ollama.rs  tts.rs
src/components/: AddFeedForm.tsx  AnalyticsDashboard.tsx  ArticlePane.tsx  DigestView.tsx  OpmlControls.tsx  ReadUrlModal.tsx  SidebarContent.tsx  SidebarNav.tsx  TimelineList.tsx
src/lib/: analytics.ts  db.ts  settings.ts
src/pages/: AnalyticsPage.tsx  HomePage.tsx  SettingsPage.tsx
src/types/: database.ts
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/.astro/: settings.json
website/public/: CNAME
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
