[package]
name = "focal"
version = "0.1.0"
description = "Focal — because focus matters."
authors = ["Nishan Shetty"]
edition = "2021"

[lib]
name = "focal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
feed-rs = "2"
scraper = "0.23"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
url = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
jsonwebtoken = "9"
